# GCP_logs

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_app.py
src/gcp_logs_desktop/: __init__.py  app_service.py  auth.py  config.py  exporter.py  filters.py  gcp_logging.py  gui.py  processor.py  projects.py
tests/: test_processor.py
