[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-bigquery-logs-desktop"
version = "0.1.0"
description = "Desktop app for downloading, filtering, and anonymizing GCP BigQuery logs."
requires-python = ">=3.10"
dependencies = [
    "google-cloud-logging>=3.12.0",
    "pyarrow>=16.0.0",
    "requests>=2.32.0",
]

[project.scripts]
gcp-bigquery-logs = "gcp_logs_desktop.gui:main"

[tool.setuptools.packages.find]
where = ["src"]
